:bug: fix: home/quickly-links icon not showing in desktop

--- a/src/styles/components/home/_quick-links.scss
+++ b/src/styles/components/home/_quick-links.scss
@@ -76,8 +76,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 1.75rem;
-    height: 1.75rem;
+    width: 3.75rem;
+    height: 3.75rem;
+    box-sizing: border-box;
   }
 
   &__link-title {
